feat：add new field

--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "Product"
+    "name": "Product",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -21,6 +22,12 @@
     },
     "price": {
       "type": "decimal"
+    },
+    "isFavorite": {
+      "type": "boolean",
+      "default": false,
+      "private": false,
+      "required": false
     }
   }
 }
